[gd_scene load_steps=9 format=2]

[ext_resource path="res://Photo/Deer.png" type="Texture" id=1]
[ext_resource path="res://Deer/DeerCode.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 12 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 12, 12 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 6.0

[sub_resource type="RayShape2D" id=6]
length = 271.0

[node name="Deer" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )

[node name="Animated" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Idle"
playing = true

[node name="Collision" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 5 )

[node name="Left" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="Collision" type="CollisionShape2D" parent="Left"]
visible = false
position = Vector2( 1, 2 )
rotation = -1.57079
shape = SubResource( 6 )

[node name="Right" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="Collision" type="CollisionShape2D" parent="Right"]
visible = false
position = Vector2( -1, 2 )
rotation = 1.5708
shape = SubResource( 6 )

[connection signal="body_entered" from="." to="." method="_on_Deer_body_entered"]
[connection signal="body_exited" from="Left" to="." method="_on_Left_body_exited"]
[connection signal="body_entered" from="Right" to="." method="_on_Right_body_entered"]
